fix css of quick-view and alert light box version mobile

--- a/public/assets/css/custom.less
+++ b/public/assets/css/custom.less
@@ -1814,6 +1814,9 @@ ul {
                 margin-top: 25px;
             }
         }
+        .modal-footer {
+            padding-bottom: 20px;
+        }
     }
 }
 /***** End style POPUP of icon_alert *****/
@@ -1926,6 +1929,7 @@ ul {
         .modal-body {
             padding-left: 0px;
             padding-right: 0px;
+            padding-bottom: 20px;
             .modal_body_left {
                 text-align: center;
                 padding-left: 0px;
